--- a/jn.ipynb
+++ b/jn.ipynb
@@ -77,7 +77,7 @@
    ],
    "source": [
     "from roboflow import Roboflow\n",
-    "rf = Roboflow(api_key=\"tMZGHKZfvbAi8LqdlFBA\")\n",
+    "rf = Roboflow(api_key=\"your_key\")\n",
     "project = rf.workspace(\"snowy-car-detection\").project(\"snowy-car-detection\")\n",
     "dataset = project.version(6).download(\"yolov8\")"
    ],
